# cfgf

./: .gitignore  LICENSE  cfgf.cabal  main.hs  stagepkgs.sh  tests.hs
Package/: Library.hs  Types.hs
src/: Main.hs  main.hs
src/Package/: Library.hs  Types.hs
templates/: PKGBUILD.template  install.template
tests/: tests.hs
