name: cfgf
version: 0.1
synopsis: Automated Haskell Packager for Archlinux
author: Thomas Dziedzic
license: MIT
build-type: Simple
cabal-version: >= 1.2
homepage: https://github.com/gostrc/cfgf
bug-reports: https://github.com/gostrc/cfgf/issues

test-suite cfgf-tests
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  hs-source-dirs: src tests
  main-is: tests.hs

  build-depends:
    HUnit >= 1.2 && < 1.3

executable cfgf
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: main.hs

  build-depends:
    base >= 4 &&  < 5,
    process >= 1.1 && < 1.2,
    text >= 0.11 && < 0.12,
    template >= 0.2 && < 0.3,
    Cabal >= 1.16 && < 1.17,
    directory >= 1.2 && < 1.3,
    containers >= 0.5 && < 0.6,
    hackage-db >= 1.5 && < 1.6

