name: cfgf
version: 0.2
synopsis: Automated Haskell Packager for Archlinux
author: Thomas Dziedzic
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.2
homepage: https://github.com/gostrc/cfgf
bug-reports: https://github.com/gostrc/cfgf/issues

data-files:
  templates/install.template
  templates/PKGBUILD.template

test-suite cfgf-tests
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  hs-source-dirs: src tests
  main-is: tests.hs

  build-depends:
    HUnit >= 1.2 && < 1.3

executable cfgf
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
    base >= 4,
    process >= 1.2,
    text >= 1.1,
    template >= 0.2,
    Cabal >= 1.18,
    directory >= 1.2,
    containers >= 0.5,
    hackage-db >= 1.7

source-repository head
  type: git
  location: git://github.com/gostrc/cfgf.git
